<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SwitchPanel">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:backgroundTint="@color/white"
        style="@style/Widget.Material3.CardView.Filled">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                android:backgroundTint="@color/white"
                style="@style/Widget.Material3.CardView.Filled">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/back"
                    android:padding="5dp"
                    android:scaleType="centerCrop"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/switch_panel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/switchboard"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/cardViewHeader">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:backgroundTint="@color/white"
            style="@style/Widget.Material3.CardView.Filled">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtElectricEquipmentsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kitchen_all_electric_equipments"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:textColor="@color/black"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtElectricEquipmentsTitle">

                    <ImageView
                        android:id="@+id/imgElectricEquipments"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/disconnected"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/contentDescription" />

                    <TextView
                        android:id="@+id/txtElectricEquipmentsStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_toEndOf="@+id/imgElectricEquipments"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/equipments_are_off"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switchElectricEquipments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"/>

                </RelativeLayout>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:backgroundTint="@color/white"
            style="@style/Widget.Material3.CardView.Filled">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtAirBlowerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air_blower"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:textColor="@color/black"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAirBlowerTitle">

                    <ImageView
                        android:id="@+id/imgAirBlower"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/air_quality"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/contentDescription"/>

                    <TextView
                        android:id="@+id/txtAirBlowerStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_toEndOf="@+id/imgAirBlower"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/air_blower_is_off"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switchAirBlower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"/>

                </RelativeLayout>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</RelativeLayout>